update_http_server_for_limited_functionalities

--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -148,7 +148,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="/wiki/App/Xtn/Browser/HTTP_Server" id="xolnki_21" title="App/Xtn/Browser/HTTP Server">HTTP Server</a>
+              <a href="/wiki/App/Xtn/Browser/HTTP_Server" id="xolnki_21" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">HTTP Server</a>
             </li>
             <li>
               <a href="/wiki/App/Xtn/Browser/XOWA_viewer" id="xolnki_22" title="App/Xtn/Browser/XOWA viewer">XOWA Viewer</a>
