--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -454,7 +454,7 @@
         (add) Html: Embed file name / width / height in HTML.
       </li>
       <li>
-        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="/wiki/App/Xtn/Browser/HTTP_Server" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
+        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="/wiki/App/Xtn/Browser/HTTP_Server" id="xolnki_8" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
         (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="/wiki/Options/Language" id="xolnki_9" title="Options/Language">Options/Language</a>
