--- a/home/wiki/App/Xtn/Browser/HTTP_Server.html
+++ b/home/wiki/App/Xtn/Browser/HTTP_Server.html
@@ -67,7 +67,7 @@
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id="Running_HTTP_Server">Running HTTP_Server</span>
+      <span class="mw-headline" id="Limited_functions">Limited functions</span>
     </h3>
     <p>
       Note that you will only be able to read pages with HTTP Server. Some functions will not work, like:
