--- a/index.html
+++ b/index.html
@@ -110,17 +110,19 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2020-09-18</b> 2020-08 English Wikipedia released<br/>
+  <ul>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
+    <a href="https://archive.org/details/Xowa_enwiki_2020-08" class="external text" rel="nofollow">archive.org</a>
+    </li>    
+  </ul>
+
   <b>2019-07-24</b> 2019-05 English Wikipedia released<br/>
   <ul>
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
     </li>
   </ul>
 
-  <b>2019-03-24</b> 2019-03 German Wikipedia released<br/>
-  <ul>
-    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis" class="external text" rel="nofollow">German Wikipedia</a>
-    </li>
-  </ul>
 
 </td>
 </tr>
